controlled_test_output/tier4_22k_20260430_ebrains_event_symbol_discovery_pass/tier4_22k_probe_build_stderr.txt
===== TIMER_TICK =====


===== SDP_PACKET_RX =====


===== MC_PACKET_RECEIVED =====


===== MCPL_PACKET_RECEIVED =====


===== MC_PACKET_RX =====
/tmp/cra_422k_probe_a1ubr3c5/probe_MC_PACKET_RX.c: In function 'c_main':
/tmp/cra_422k_probe_a1ubr3c5/probe_MC_PACKET_RX.c:11:23: error: 'MC_PACKET_RX' undeclared (first use in this function); did you mean 'SDP_PACKET_RX'?
   11 |     spin1_callback_on(MC_PACKET_RX, cra_probe_callback, 0);
      |                       ^~~~~~~~~~~~
      |                       SDP_PACKET_RX
/tmp/cra_422k_probe_a1ubr3c5/probe_MC_PACKET_RX.c:11:23: note: each undeclared identifier is reported only once for each function it appears in


===== MCPL_PACKET_RX =====
/tmp/cra_422k_probe_a1ubr3c5/probe_MCPL_PACKET_RX.c: In function 'c_main':
/tmp/cra_422k_probe_a1ubr3c5/probe_MCPL_PACKET_RX.c:11:23: error: 'MCPL_PACKET_RX' undeclared (first use in this function); did you mean 'SDP_PACKET_RX'?
   11 |     spin1_callback_on(MCPL_PACKET_RX, cra_probe_callback, 0);
      |                       ^~~~~~~~~~~~~~
      |                       SDP_PACKET_RX
/tmp/cra_422k_probe_a1ubr3c5/probe_MCPL_PACKET_RX.c:11:23: note: each undeclared identifier is reported only once for each function it appears in


===== FR_PACKET_RECEIVED =====


===== FRPL_PACKET_RECEIVED =====


===== USER_EVENT =====


===== CC_MC_INT =====

